Fixed bug with error message visibility

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -136,3 +136,7 @@
 #app__output {
     margin-left: 15px;
 }
+
+#app__input.app__error textarea {
+    top: 20px;
+}
